--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "local": "node src/app.js --mode local",
+    "local": "nodemon src/app.js --mode local --persist mongodb",
+    "localfs": "nodemon src/app.js --mode local --persist file",
     "prod": "node src/app.js --mode prod",
     "dev": "node src/app.js --mode dev"
   },
@@ -16,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
